First Stab at SuperGroups Implementation - Includes SuperGroupRegistration - Includes SuperGroupCreateReponse - Includes SuperGroupChangeColors - Includes SuperGroupCostume - Moves supergroup variable out of Entity, and into CharData, because entities wont have SGs

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -63,10 +63,12 @@ SET(target_INCLUDE
     Events/PowerSystemEvents.h
     Events/SaveClientOptions.h
     Events/SceneEvent.h
+    Events/SendStance.h
     Events/SetClientState.h
     Events/Shortcuts.h
     Events/SidekickOffer.h
     Events/StandardDialogCmd.h
+    Events/SuperGroupEvents.h
     Events/TeamLooking.h
     Events/TeamOffer.h
     Events/TrayAdd.h
