--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -7,6 +7,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/SuperGroup.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.cpp
 )
 SET(target_INCLUDE
@@ -19,6 +20,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Friend.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.h
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
+${CMAKE_CURRENT_SOURCE_DIR}/SuperGroup.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.h
 )
 
