--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -78,3 +78,4 @@ log_lfg             = false
 log_npcs            = false
 log_animations      = false
 log_powers          = false
+log_supergroups     = false
