Settings for AFKness

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -52,6 +52,12 @@ location_addr       = 127.0.0.1:7003
 maps                = DefaultMapInstances
 player_fade_in      = 380.0
 
+[AFK Settings]
+time_to_afk         = 300
+time_to_logout_msg  = 1080
+time_to_auto_logout = 120
+uses_auto_logout    = true
+
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
 log_logging         = false
