A few fixes and reduce the header includes.

--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(target_CPP
     Events/SceneEvent.cpp
     Events/InfoMessageCmd.cpp
     Events/WindowState.cpp
+    MapClientSession.cpp
     NpcGenerator.cpp
     MapEventFactory.cpp
     MapInstance.cpp
