A few more warning fixes.
Bonus : split out TimeEvent into separate file.
Bonus : use std::chrono in a few places.
Bonus fix: getDisplayMapName was returning by value but
getFriendDisplayMapName was returning as reference to it.

--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(target_INCLUDE
     SEGSEvent.h
     SEGSEventFactory.h
     LinkLevelEvent.h
+    TimeEvent.h
     SEGSTimer.h
     FixedPointValue.h
     Settings.h
