--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -55,8 +55,8 @@ set(GAMEDATA_SRC
     #def_serializers.cpp
     map_serializers.cpp
     map_serializers.h
-    #seq_serializers.cpp
-    #seq_serializers.h
+    seq_serializers.cpp
+    seq_serializers.h
     seq_definitions.h
     shop_serializers.cpp
     shop_serializers.h
