--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -90,5 +90,5 @@ log_powers          = false
 inherent_powers="Brawl,prestige_generic_Sprintp,Sprint,Rest"
 starting_temps="EMP_Glove,Cryoprojection_Bracers"
 starting_inspirations="Resurgence,Phenomenal_Luck"
-starting_levels=1
+starting_level=1
 starting_inf=0
