Add "logTrades/log.trades" logger.
Also add missing checkbox for "logPowers/log.powers" in admin gui.

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -85,6 +85,7 @@ log_lfg             = false
 log_npcs            = false
 log_animations      = false
 log_powers          = false
+log_trades          = false
 
 [StartingCharacter]
 inherent_powers="Brawl,prestige_generic_Sprintp,Sprint,Rest"
