Compile and make use of jcon for rpc.
`heyServer` method can be called from SEGSAdminTool through the
websocket jsonrpc.

--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -24,4 +24,5 @@ if(ENABLE_SCRIPTING_ENGINE)
     include(ExternalProject_LUA.cmake)
     include(ExternalProject_SOL2.cmake)
 endif()
+include(ExternalProject_JCON.cmake)
 
