--- a/Projects/CoX/Servers/MapServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(target_INCLUDE
     Events/ChatDividerMoved.h
     Events/ChatMessage.h
     Events/ClientStates.h
+    Events/ContactDialogs.h
     Events/DeadNoGurney.h
     Events/DoorMessage.h
     Events/EmailHeaders.h
