--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -14,6 +14,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/GameEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameLink.h
 ${CMAKE_CURRENT_SOURCE_DIR}/EmailEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/EmailHandler.h
+${CMAKE_CURRENT_SOURCE_DIR}/EmailDefinitions.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
