Added faceEntity, faceLocation, addNpc and printDebug to Lua Added qCDebug(logScripts) Added logScript checkbox to Admin UI

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -93,3 +93,4 @@ log_npcs            = false
 log_animations      = false
 log_powers          = false
 log_trades          = false
+log_scripts         = false
