Creating a Semi-Standalone EmailHandler that derives from EventProcessor (Part 2) (#548)
Great PR @eos428 !!! Thank you for tackling this issue

* Closes #367.

A very barebones implementation of EmailHandler at the moment. Further details are in PR opening post.

* Deleted Common/Email folders and its contents placed into Servers/MapServer/Events folder instead.
EmailHandler is usable, but only for email headers.
EmailHandler is initialized in MapServer (not sure if the right place... feel free to let me know)
Changed up the email functions in DataHelpers for testing purposes. Should we remove these DataHelpers functions and use the EmailHandler directly from the Cmd commands?

* Some update to the email handler. Now incorporates a message bus endpoint that subscribes to InternalEvents::onClientConnected and onClientDisconnected.
TODO: Investigate why the handler becomes unusable when two events are fired to it at once (when opening the email tab for the first time, the client will send both /emailheaders and /emailread 152)

* Should be close to a working EmailHandler now (without db involved yet).
When gameHandler is given evClientConnected and evClientDisconnected in its queue, it will post those events globally to the message bus for others (such as EmailHandler) to listen

* EmailHandler and EmailEvents moved to GameServer
There's a lot of commented code in EmailHandler.cpp (the ones where EmailHeaders and EmailRead are declared especially) but they shouldn't be there in the first place, and should be done in MapInstance instead. I will continue on by making the EmailHandler return a response to the MapInstance, and then the header/email read is declared there instead.

* Moved EmailHandler and EmailEvents to GameServer
A lot of stuff I will explain in the PR comment instead

* Giving EmailHandler access to GameDbSyncHandler (we'll need it because this is related to DB stuff)

* Update Email Events

* build ruuuuuuuuuuuuns

* Chang

--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -4,6 +4,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/GameServer.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEvents.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEventFactory.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/GameLink.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/EmailHandler.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/GameServer.h
@@ -11,6 +12,9 @@ ${CMAKE_CURRENT_SOURCE_DIR}/GameHandler.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEventFactory.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameEvents.h
 ${CMAKE_CURRENT_SOURCE_DIR}/GameLink.h
+${CMAKE_CURRENT_SOURCE_DIR}/EmailEvents.h
+${CMAKE_CURRENT_SOURCE_DIR}/EmailHandler.h
+${CMAKE_CURRENT_SOURCE_DIR}/EmailDefinitions.h
 )
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
