--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -9,6 +9,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/LFG.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Movement.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/StateStorage.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Trade.cpp
 )
@@ -24,6 +25,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/LFG.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Movement.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Powers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/StateInterpolator.h
+${CMAKE_CURRENT_SOURCE_DIR}/StateStorage.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Team.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Trade.h
 )
