--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -94,3 +94,4 @@ log_animations      = false
 log_powers          = false
 log_trades          = false
 log_scripts         = false
+log_scenegraph      = false
