-Add initial version of SEGSAdmin script editor, allowing editing of MOTD.smlx and Tutorial.smlx -Incorporating @nemerles AdminRPC changes -Add two more test methods to AdminRPC. helloServer and getVersion.

--- a/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
+++ b/Projects/CoX/Utilities/SEGSAdmin/CMakeLists.txt
@@ -36,6 +36,14 @@ set(SEGSADMIN_SOURCES
     AboutDialog.cpp
     AboutDialog.h
     AboutDialog.ui
+    TextEdit.cpp
+    TextEdit.h
+    SelectScriptDialog.cpp
+    SelectScriptDialog.h
+    SelectScriptDialog.ui
+    SyntaxHighlighter.cpp
+    SyntaxHighlighter.h
+
 
 )
 add_executable(SEGSAdmin WIN32 ${SEGSADMIN_SOURCES})
