--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: generic # prevent travis from overriding provided compilers.
 cache:
-  ccache: true # includes $HOME/.ccache and adds /usr/lib/ccache to $PATH
   directories:
-    - 3rd_party
+    - $HOME/.ccache
 dist: trusty
 
 notifications:
@@ -86,7 +85,7 @@ install:
 #    fi
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sudo apt-get install -qq qt59base qt59declarative qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
+      sudo apt-get install -qq qt59base qt59declarative qt59websockets qt59quickcontrols2; source /opt/qt59/bin/qt59-env.sh;
       CMAKE_OPTS="";
     else
       brew install cppcheck qt;
