--- a/Projects/CoX/Common/NetStructures/CMakeLists.txt
+++ b/Projects/CoX/Common/NetStructures/CMakeLists.txt
@@ -4,6 +4,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/CommonNetStructures.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/EntityHelpers.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/Movement.cpp
@@ -18,6 +19,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/Character.h
 ${CMAKE_CURRENT_SOURCE_DIR}/CharacterHelpers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Costume.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Entity.h
+${CMAKE_CURRENT_SOURCE_DIR}/EntityHelpers.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Friend.h
 ${CMAKE_CURRENT_SOURCE_DIR}/Contact.h
 ${CMAKE_CURRENT_SOURCE_DIR}/LFG.h
