Extend the runtime.
Add a templatized Handle for handle-based storage.
Split up prefab/model/axisalignedbox from scene graph
namespace the scene graph parts.

--- a/Projects/CoX/Common/Runtime/CMakeLists.txt
+++ b/Projects/CoX/Common/Runtime/CMakeLists.txt
@@ -2,6 +2,9 @@ find_package(Qt5 COMPONENTS Core REQUIRED)
 set(COMMON_RUNTIME_SRC
     SceneGraph.h
     SceneGraph.cpp
+    Model.h
+    Handle.h
+    Prefab.h
 )
 add_library(common_runtime STATIC ${COMMON_RUNTIME_SRC})
 add_dependencies(common_runtime gameData)
