add team handler and properly tear down GameServer child handlers

--- a/Projects/CoX/Common/Messages/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(GameDatabase)
 add_subdirectory(Game)
 add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
+add_subdirectory(TeamService)
 add_subdirectory(Map)
