Common needs ACE as a full blown dependency.

--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -50,7 +50,7 @@ add_library(SEGS_Components STATIC ${target_SOURCES} )
 add_dependencies(SEGS_Components ACE_BUILD)
 
 target_link_libraries(SEGS_Components PUBLIC Qt5::Core)
-target_link_libraries(SEGS_Components INTERFACE ace_IMP)
+target_link_libraries(SEGS_Components PUBLIC ace_IMP)
 IF(MINGW)
     target_link_libraries(SEGS_Components INTERFACE ws2_32)
 ENDIF()
