All _interface classes in turn, depend on Common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,8 @@ macro(add_messages_library name )
     # allow all headers to refer to events by their dir/name.h
     target_include_directories(${name}_interface PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
     target_link_libraries(${name}_interface PUBLIC Qt5::Core)
+    # all interfaces use stuff from Common, so should depend/link to it
+    target_link_libraries(${name}_interface PUBLIC Common)
 endmacro()
 
 macro(add_handler name)
