--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: generic # prevent travis from overriding provided compilers.
 cache:
+  ccache: true    # includes $HOME/.ccache and adds /usr/lib/ccache to $PATH
   directories:
-    - $HOME/.ccache
+    - 3rd_party
 dist: trusty
 
 notifications:
