--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: generic # prevent travis from overriding provided compilers.
 cache:
   ccache: true    # includes $HOME/.ccache and adds /usr/lib/ccache to $PATH
-  directories:
-    - 3rd_party
+# directories:
+#   - 3rd_party   # this is sometimes breaking subsequent Travis builds
 dist: trusty
 
 notifications:
