--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,7 @@ install:
     else
       brew install cppcheck qt;
       brew link --force qt;
+      export PATH="/usr/local/opt/qt/bin:$PATH" # missing mkspecs fix
       QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake);
       CMAKE_OPTS="-DCMAKE_PREFIX_PATH=${QT5_CMAKE_PREFIX}";
     fi
