--- a/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
@@ -35,3 +35,8 @@ set_property(TARGET AuthProtocol PROPERTY POSITION_INDEPENDENT_CODE ON)
 if(ENABLE_TESTS)
     add_subdirectory(UnitTests)
 endif()
+# Retain directory structure in visual studio
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${target_CPP} ${target_INCLUDE}) 
+set_target_properties (AuthProtocol PROPERTIES
+    FOLDER Projects/CoX/Common
+)
