--- a/Utilities/slav/CMakeLists.txt
+++ b/Utilities/slav/CMakeLists.txt
@@ -22,3 +22,14 @@ target_link_libraries(slav cereal_IMP  Qt5::Core Qt5::Widgets Qt5::Network)
 
 add_executable(ManifestBuilder ManifestBuilder.cpp ProjectManifest.cpp FileSignatureWorker)
 target_link_libraries(ManifestBuilder cereal_IMP Qt5::Core)
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES slav SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+get_target_property(TARGET_SOURCES2 ManifestBuilder SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES2}) 
+set_target_properties (slav PROPERTIES
+    FOLDER Utilities
+)
+set_target_properties (ManifestBuilder PROPERTIES
+    FOLDER Utilities
+)
