--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -43,3 +43,11 @@ add_dependencies(CRUDP_Protocol ace_IMP)
 if(ENABLE_TESTS)
     add_subdirectory(UnitTests)
 endif()
+
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES CRUDP_Protocol SOURCES) 
+list(REMOVE_ITEM TARGET_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/CRUDPEvents.gen.cpp)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (CRUDP_Protocol PROPERTIES
+    FOLDER Projects/CoX/Common
+)
