--- a/Projects/CoX/Servers/AuthDatabase/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthDatabase/CMakeLists.txt
@@ -20,3 +20,10 @@ target_link_libraries(AuthDatabase PRIVATE cereal_IMP)
 if(ENABLE_TESTS)
     add_subdirectory(UnitTests)
 endif()
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES AuthDatabase SOURCES) 
+list(REMOVE_ITEM TARGET_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/AuthDBEvents.gen.cpp)
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (AuthDatabase PROPERTIES
+    FOLDER Projects/CoX/Servers
+)
