--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -34,3 +34,9 @@ target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
 if(ENABLE_TESTS)
     add_subdirectory(UnitTests)
 endif()
+
+get_target_property(TARGET_SOURCES GameServer SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (GameServer PROPERTIES
+    FOLDER Projects/CoX/Servers
+)
