--- a/Projects/CoX/Servers/GameServer/EmailService/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/EmailService/CMakeLists.txt
@@ -20,3 +20,8 @@ target_link_libraries(EmailService INTERFACE SEGS_Components )
 if(ENABLE_TESTS)
 #    add_subdirectory(UnitTests)
 endif()
+get_target_property(TARGET_SOURCES EmailService SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (EmailService PROPERTIES
+    FOLDER Projects/CoX/Servers/GameServer
+)
