--- a/Projects/CoX/Servers/GameServer/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/UnitTests/CMakeLists.txt
@@ -12,3 +12,10 @@ target_link_libraries(GameEventRegistry
     GameServer
     common_runtime
 )
+
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES GameEventRegistry SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (GameEventRegistry PROPERTIES
+    FOLDER UnitTests/GameServer/GameEventRegistry
+)
