--- a/Projects/CoX/Utilities/BinConverter/CMakeLists.txt
+++ b/Projects/CoX/Utilities/BinConverter/CMakeLists.txt
@@ -15,3 +15,9 @@ target_link_libraries(binConverter PUBLIC gameData cereal_IMP)
 target_link_libraries(binConverter PUBLIC Qt5::Core)
 
 
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES binConverter SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (binConverter PROPERTIES
+    FOLDER Utilities
+)
