--- a/Utilities/event_gen/CMakeLists.txt
+++ b/Utilities/event_gen/CMakeLists.txt
@@ -6,3 +6,9 @@ IF(WIN32)
     include(Windeployqt)
     windeployqt(event_gen deploy)
 ENDIF()
+# Retain directory structure in visual studio
+get_target_property(TARGET_SOURCES event_gen SOURCES) 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
+set_target_properties (event_gen PROPERTIES
+    FOLDER Utilities
+)
