--- a/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
+++ b/Projects/CoX/Utilities/MapViewer/CMakeLists.txt
@@ -34,9 +34,9 @@ TARGET_LINK_LIBRARIES(mapviewer
 # the following flag is need to compile on mingw
 target_compile_options(mapviewer PUBLIC -march=native)
 #add_custom_command(TARGET mapviewer POST_BUILD
-#    COMMAND ${CMAKE_COMMAND} -E make_directory ${EXECUTABLE_OUTPUT_PATH}/mapviewer_data
-#    COMMAND ${CMAKE_COMMAND} -E copy_directory ${ThirdParty_Install_Dir}/share/Lutefisk3D/CoreData ${EXECUTABLE_OUTPUT_PATH}/mapviewer_data/CoreData
-#    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/Data ${EXECUTABLE_OUTPUT_PATH}/mapviewer_data/Data
+#    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mapviewer_data
+#    COMMAND ${CMAKE_COMMAND} -E copy_directory ${ThirdParty_Install_Dir}/share/Lutefisk3D/CoreData ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mapviewer_data/CoreData
+#    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/Data ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mapviewer_data/Data
 #)
 # Retain directory structure in visual studio
 get_target_property(TARGET_SOURCES mapviewer SOURCES) 
