Move costumes to serialized blob instead of table

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -37,7 +37,7 @@ CharacterDatabase\db_user   = segsadmin
 CharacterDatabase\db_pass   = segs123
 
 [AuthServer]
-location_addr         = 127.0.0.1:2106
+location_addr       = 127.0.0.1:2106
 
 [GameServer] 
 server_name         = first server
@@ -59,11 +59,12 @@ time_to_auto_logout = 120
 uses_auto_logout    = true
 
 [StartingCharacter]
-inherent_powers="prestige_generic_Sprintp"
-starting_temps="EMP_Glove,Cryoprojection_Bracers"
-starting_inspirations="Resurgence,Phenomenal_Luck"
-starting_level=1
-starting_inf=0
+inherent_powers         = "prestige_generic_Sprintp"
+starting_temps          = "EMP_Glove,Cryoprojection_Bracers"
+starting_inspirations   = "Resurgence,Phenomenal_Luck"
+starting_level          = 1
+starting_inf            = 0
+costume_slot_unlocks    = "19, 29, 39, 49"
 
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
