Fixing bugs, and flattening buffers
* appendBitStream is correctly not aligning buffers now
* BitStream.h no longer included everywhere
* EntitiesResponse no longer has separete buffers for various parts,
it's all a flat vat of warm bit-goo now.

--- a/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(target_CPP
     CRUDP_Packet.cpp
     CRUDP_Protocol.cpp
+    CRUD_Events.cpp
     CRUD_Link.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/GameProtocol.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/GameProtocolHandler.cpp
