improved team creation and invitation

--- a/Projects/CoX/Common/Messages/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(Game)
 add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
 add_subdirectory(TeamService)
+add_subdirectory(UserRouterService)
 add_subdirectory(Map)
