--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory(FriendshipService)
 add_subdirectory(EmailService)
 add_subdirectory(TeamService)
 
-target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService TeamService)
+target_link_libraries(GameServer PUBLIC Qt5::Core FriendshipService EmailService TeamService UserRouterService_interface)
 target_link_libraries(GameServer INTERFACE SEGS_Components gameData)
 
 if(ENABLE_TESTS)
