--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -51,6 +51,7 @@ listen_addr         = 127.0.0.1:7003
 location_addr       = 127.0.0.1:7003
 maps                = DefaultMapInstances
 player_fade_in      = 380.0
+motd_timer          = 120.0
 
 [AFKSettings]
 time_to_afk         = 300
