--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
     ChatMessage.cpp
     ChatMessage.h
     ContactDialogs.h
+    ContactList.h
     DeadNoGurney.h
     DoorMessage.h
     EmailHeaders.h
