--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCES
     AddTimeStateLog.h
     Browser.h
+    ClueList.h
     ChangeTitle.h
     ChatDividerMoved.cpp
     ChatDividerMoved.h
