--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -37,33 +37,34 @@ CharacterDatabase\db_user   = segsadmin
 CharacterDatabase\db_pass   = segs123
 
 [AuthServer]
-location_addr         = 127.0.0.1:2106
+location_addr           = 127.0.0.1:2106
 
 [GameServer] 
-server_name         = first server
-listen_addr         = 127.0.0.1:7002
-location_addr       = 127.0.0.1:7002
-max_players         = 200
-max_character_slots = 8
+listen_addr             = 127.0.0.1:7002
+location_addr           = 127.0.0.1:7002
+max_players             = 200
+max_character_slots     = 8
 
 [MapServer]  
-listen_addr         = 127.0.0.1:7003
-location_addr       = 127.0.0.1:7003
-maps                = DefaultMapInstances
-player_fade_in      = 380.0
+listen_addr             = 127.0.0.1:7003
+location_addr           = 127.0.0.1:7003
+maps                    = DefaultMapInstances
+player_fade_in          = 380.0
+motd_timer              = 120.0
+costume_slot_unlocks    = "19, 29, 39, 49"
 
 [AFKSettings]
-time_to_afk         = 300
-time_to_logout_msg  = 1080
-time_to_auto_logout = 120
-uses_auto_logout    = true
+time_to_afk             = 300
+time_to_logout_msg      = 1080
+time_to_auto_logout     = 120
+uses_auto_logout        = true
 
 [StartingCharacter]
-inherent_powers="prestige_generic_Sprintp"
-starting_temps="EMP_Glove,Cryoprojection_Bracers"
-starting_inspirations="Resurgence,Phenomenal_Luck"
-starting_level=1
-starting_inf=0
+inherent_powers         = "prestige_generic_Sprintp"
+starting_temps          = "EMP_Glove,Cryoprojection_Bracers"
+starting_inspirations   = "Resurgence,Phenomenal_Luck"
+starting_level          = 1
+starting_inf            = 0
 
 [Logging]
 log_generic         = *.debug=true\nqt.*.debug=false
@@ -93,5 +94,6 @@ log_npcs            = false
 log_animations      = false
 log_powers          = false
 log_trades          = false
+log_tailor          = false
 log_scripts         = false
 log_scenegraph      = false
