--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
     FloatingInfo.h
     FloatingInfoStyles.h
     FriendsListUpdate.h
+    ForceClientLogout.h
     GameCommand.h
     GameCommandList.h
     InfoMessageCmd.h
