Broxen's requested changes
Changed file name to match class as well.

--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -23,7 +23,7 @@ set(SOURCES
     FloatingInfo.h
     FloatingInfoStyles.h
     FriendsListUpdate.h
-    ForceClientLogout.h
+    ForceLogout.h
     GameCommand.h
     GameCommandList.h
     InfoMessageCmd.h
