--- a/Projects/CoX/Servers/GameDatabase/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameDatabase/UnitTests/CMakeLists.txt
@@ -12,3 +12,8 @@ target_link_libraries(GameDBEventRegistry
     GameDatabase_interface
     SEGS_Components
 )
+
+set_target_properties (GameDBEventRegistry PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+)
