--- a/Projects/CoX/Utilities/dbtool/CMakeLists.txt
+++ b/Projects/CoX/Utilities/dbtool/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET(CMAKE_CXX_STANDARD 11)
+SET(CMAKE_CXX_STANDARD 14)
 
 IF(MSVC)
     ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE -DNOMINMAX)
@@ -10,6 +10,16 @@ find_package(Qt5 COMPONENTS Core Sql REQUIRED)
 
 set(tool_SRC
     main.cpp
+    AddUser.cpp
+    AddUser.h
+    CreateDB.cpp
+    CreateDB.h
+    DatabaseConfig.cpp
+    DatabaseConfig.h
+    UpgradeDB.cpp
+    UpgradeDB.h
+    UpgradeHooks.cpp
+    UpgradeHooks.h
 )
 add_executable(dbtool ${tool_SRC})
 target_link_libraries(dbtool Qt5::Core Qt5::Sql)
@@ -19,4 +29,6 @@ get_target_property(TARGET_SOURCES dbtool SOURCES)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
 set_target_properties (dbtool PROPERTIES
     FOLDER Projects/CoX/Utilities
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
