--- a/Projects/CoX/Common/AuthProtocol/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/UnitTests/CMakeLists.txt
@@ -11,3 +11,8 @@ target_link_libraries(AuthEventRegistry
     Qt5::Test
     AuthProtocol
 )
+
+set_target_properties (AuthEventRegistry PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+)
