--- a/Projects/CoX/Common/CRUDP_Protocol/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Common/CRUDP_Protocol/UnitTests/CMakeLists.txt
@@ -13,3 +13,8 @@ target_link_libraries(CRUDPEventRegistry
     SEGS_Components
     CRUDP_Protocol
 )
+
+set_target_properties (CRUDPEventRegistry PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+)
