--- a/Projects/CoX/Servers/GameServer/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/UnitTests/CMakeLists.txt
@@ -18,4 +18,6 @@ get_target_property(TARGET_SOURCES GameEventRegistry SOURCES)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
 set_target_properties (GameEventRegistry PROPERTIES
     FOLDER UnitTests/GameServer/GameEventRegistry
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
 )
