--- a/Projects/CoX/Servers/MapServer/UnitTests/CMakeLists.txt
+++ b/Projects/CoX/Servers/MapServer/UnitTests/CMakeLists.txt
@@ -17,3 +17,8 @@ target_link_libraries(MapEventRegistry
     GameDatabase_interface
 )
 set_property(TARGET MapEventRegistry PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+set_target_properties (MapEventRegistry PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities/unit_tests
+)
