--- a/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
+++ b/Projects/CoX/Utilities/AuthExerciser/CMakeLists.txt
@@ -7,6 +7,11 @@ add_executable(AuthExerciser ${SOURCES} ${HEADERS})
 add_dependencies(AuthExerciser ace_IMP cereal_IMP) # used for Singleton stuff.
 target_link_libraries(AuthExerciser PUBLIC Qt5::Core)
 
+set_target_properties (AuthExerciser PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+)
+
 TARGET_LINK_LIBRARIES(AuthExerciser PUBLIC
     Threads::Threads
     ${target_DEPENDS}
