--- a/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
+++ b/Projects/CoX/Utilities/TextureConverter/CMakeLists.txt
@@ -10,4 +10,6 @@ get_target_property(TARGET_SOURCES texConverter SOURCES)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
 set_target_properties (texConverter PROPERTIES
     FOLDER Projects/CoX/Utilities
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
