--- a/Projects/CoX/Utilities/piggtool/CMakeLists.txt
+++ b/Projects/CoX/Utilities/piggtool/CMakeLists.txt
@@ -18,4 +18,6 @@ get_target_property(TARGET_SOURCES piggtool SOURCES)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES}) 
 set_target_properties (piggtool PROPERTIES
     FOLDER Projects/CoX/Utilities
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
