--- a/Utilities/slav/CMakeLists.txt
+++ b/Utilities/slav/CMakeLists.txt
@@ -29,7 +29,11 @@ get_target_property(TARGET_SOURCES2 ManifestBuilder SOURCES)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES2}) 
 set_target_properties (slav PROPERTIES
     FOLDER Utilities
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
 set_target_properties (ManifestBuilder PROPERTIES
     FOLDER Utilities
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/utilities
 )
