Early test, Client crashes

--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -54,6 +54,7 @@ set(SOURCES
     Shortcuts.h
     SidekickOffer.h
     StandardDialogCmd.h
+    Stores.h
     TailorOpen.h
     Tasks.h
     TeamLooking.h
