--- a/Projects/CoX/Common/Messages/Map/CMakeLists.txt
+++ b/Projects/CoX/Common/Messages/Map/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCES
     Shortcuts.h
     SidekickOffer.h
     StandardDialogCmd.h
+    StoresEvents.h
     TailorOpen.h
     Tasks.h
     TeamLooking.h
