Add `ent_types` conversion feature to binConverter. (#740)
+ implement optional field support for serialized structures.
+ Added `EntitySequencerData` to hold the sequencer 'type' data.
* binConverter can take a path to `ent_types/` data directory and will produce a `data/converted/ent_types.crl.json` file that contains all ent_types in cereal format.

--- a/Projects/CoX/Common/GameData/CMakeLists.txt
+++ b/Projects/CoX/Common/GameData/CMakeLists.txt
@@ -47,6 +47,7 @@ SET(target_CPP
     #def_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/map_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/seq_serializers.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/seq_definitions.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/shop_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/trick_serializers.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/trick_definitions.cpp
