--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rd_party/Lutefisk3D"]
 	path = 3rd_party/Lutefisk3D
 	url = https://github.com/Lutefisk3D/lutefisk3d
+[submodule "3rd_party/jcon-cpp"]
+	path = 3rd_party/jcon-cpp
+	url = https://github.com/joncol/jcon-cpp
