Update settings_template with AdminRPC section.
Update settings_template with AdminRPC section. Added default values and instructions for use.

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -39,6 +39,34 @@ CharacterDatabase\db_pass   = segs123
 [AuthServer]
 location_addr           = 127.0.0.1:2106
 
+##############################################################
+# By default, the JSON-RPC server only listens on the servers
+# loopback interface (127.0.0.1) on port 6001. The RPC server
+# also supports TCP and Websocket connections, using TCP by
+# by default. Uncommenting the following section and setting
+# the parameters to an alternative interface IP and port
+# values will allow the RPC server to listen on those values. 
+# 
+#  location_addr  Can be any valid IP and port combination
+#                 for the server. To find your IP:
+#                 * If running on a linux system, run 
+#                   'ip address' or 'ifconfig' in a terminal
+#                   window to show the available IPs.
+#                 * On Windows, open a command prompt and run
+#                   'ipconfig' to show the available IPs.
+#                 Choose a displayed IP that corresponds to an
+#                 interface connected to your local network.
+#                 DEFAULT: 127.0.0.1:6001
+#
+#  server_type    Can be either 'websockets' or 'tcp'.
+#                 DEFAULT: tcp
+#
+##############################################################
+
+#[AdminRPC]
+#location_addr           = 127.0.0.1:6001
+#server_type             = tcp
+
 [GameServer] 
 listen_addr             = 127.0.0.1:7002
 location_addr           = 127.0.0.1:7002
