Update settings template with AdminRPC section. Segs#633,#692,#742)
Update settings template with AdminRPC section. Added default values and instructions for use. For issues #633, #692, #742

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -12,13 +12,14 @@
 #      for example: 10.0.0.2
 #
 #    Default ports are listed below:
-#      AccountDatabase db_port:		5432
-#      CharacterDatabase db_port:	5432
-#      AuthServer location_addr:	2106
-#      GameServer listen_addr:		7002
-#      GameServer location_addr:	7002
-#      MapServer listen_addr:		7003
-#      MapServer location_addr:		7003
+#      AccountDatabase      db_port:            5432
+#      CharacterDatabase    db_port:            5432
+#      AuthServer           location_addr:      2106
+#      GameServer           listen_addr:        7002
+#      GameServer           location_addr:      7002
+#      MapServer            listen_addr:        7003
+#      MapServer            location_addr:      7003
+#      AdminRPC             location_addr:      6001
 #
 ##############################################################
 
@@ -40,23 +41,16 @@ CharacterDatabase\db_pass   = segs123
 location_addr           = 127.0.0.1:2106
 
 ##############################################################
-# By default, the JSON-RPC server only listens on the servers
-# loopback interface (127.0.0.1) on port 6001. The RPC server
-# also supports TCP and Websocket connections, using TCP by
-# by default. Uncommenting the following section and setting
-# the parameters to an alternative interface IP and port
-# values will allow the RPC server to listen on those values. 
+#    AdminRPC is the JSON-RPC server. It supports TCP and
+#    Websocket connections, using TCP by default.
+#
+#    Uncommenting the following section and setting the
+#    parameters will allow the RPC server to listen on an
+#    alternative interface IP address and port. The server type
+#    can be changed as well. 
 # 
 #  location_addr  Can be any valid IP and port combination
-#                 for the server. To find your IP:
-#                 * If running on a linux system, run 
-#                   'ip address' or 'ifconfig' in a terminal
-#                   window to show the available IPs.
-#                 * On Windows, open a command prompt and run
-#                   'ipconfig' to show the available IPs.
-#                 Choose a displayed IP that corresponds to an
-#                 interface connected to your local network.
-#                 DEFAULT: 127.0.0.1:6001
+#                 for the server.
 #
 #  server_type    Can be either 'websockets' or 'tcp'.
 #                 DEFAULT: tcp
